Fix animebox z-index

--- a/pomodoro/index.css
+++ b/pomodoro/index.css
@@ -165,8 +165,8 @@ body {
   border: 7px solid;
   border-color: whitesmoke;
   border-radius: 50%;
-  text-transform: uppercase;
   overflow: hidden;
+  z-index: 1;
 }
 
 #WaterAnime {
@@ -323,6 +323,7 @@ body {
   color: whitesmoke;
   width: 100px;
   height: 42px;
+  top: 10px;
   border: 0;
   border-radius: 30px;
   cursor: pointer;
